Added Searchbar basic markup & fixed top nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="assets/reset.css">
     </head>
     <body>
+    <div id="top-spacer">
         <nav>
             <ul id="left-navigation">
                 <li class="nav-item">About</li>
@@ -14,12 +15,17 @@
             <ul id="right-navigation">
                 <li class="nav-item">Gmail</li>
                 <li class="nav-item">Images</li>
-                <li class="nav-item" id="apps-gliph"> </li>
-                <li class="nav-item" style="justify-content: flex-end;"><button id="sign-in">Sign in</button></li>
+                <li class="nav-item" id="apps-gliph"></li>
+                <li class="nav-item"><button id="sign-in">Sign in</button></li>
             </ul>
         </nav>
+    </div>
         <main>
-
+            <div class="container">
+                <form name="search">
+                    <input type="text" name="searchbar" value="search" id="search-bar">
+                </form>
+            </div>
         </main>
         <footer>
 
