Added search area styling to main.css and changed the markup for the search area

--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
     </div>
         <main>
             <div class="container">
-                <form name="search">
-                    <input type="text" name="searchbar" value="search" id="search-bar">
-                </form>
+                <div class="search-container">
+                </div>
+                <div class="search-buttons">
+                    <button class="search-button-item" value="Google Search" type="submit">Google Search</button>
+                    <button  class="search-button-item" value="I'm Feeling Lucky" type="submit">I'm Feeling Lucky</button>
+                </div>
+                <div class="tag-line">
+                    <span>Stay at Home. Protect the NHS. Save Lives</span>
+                </div>
             </div>
         </main>
         <footer>
