--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Google Homepage - TOP</title>
         <link rel="stylesheet" href="assets/main.css">
         <link rel="stylesheet" href="assets/reset.css">
+        <meta charset="utf-8"/>
     </head>
     <body>
     <div id="top-spacer">
@@ -23,18 +24,32 @@
         <main>
             <div class="container">
                 <div class="search-container">
+                    <div class="search-container-inner">
+                        <div class="search-container-img">
+                            <div class="search-container-img-inner">
+                                <span class="search-gliph sconfig">
+                                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                        <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                                    </svg>
+                                    
+                                </span>
+                            </div>
+                        </div>
+                        <div class="sinput">
+                            <input type="text" class="search-input-text">
+                        </div>
+                    </div>
                 </div>
                 <div class="search-buttons">
                     <button class="search-button-item" value="Google Search" type="submit">Google Search</button>
                     <button  class="search-button-item" value="I'm Feeling Lucky" type="submit">I'm Feeling Lucky</button>
                 </div>
-                <div class="tag-line">
-                    <span>Stay at Home. Protect the NHS. Save Lives</span>
-                </div>
             </div>
         </main>
         <footer>
-
+            <div class="tag-line">
+                <a href="">Stay at Home. Protect the NHS. Save Lives</a>
+            </div>
         </footer>
     </body>
 </html>
