Added google logo markup and added basic skeleton styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         </nav>
     </div>
         <main>
+
+            <!--Logo Markup starts-->
+            <div class="logo">
+                <div class="homepage-logo">
+                    <img src="/assets/images" alt="Google logo" style="padding-top: 21px;" title="Google Logo" width="450" height="180" border="0">
+                </div>
+            </div>
+            <!--Logo Markup ends-->
+
+            <!-- Search Bar & Button markup starts-->
             <div class="container">
                 <div class="search-container">
                     <div class="search-container-inner">
@@ -45,6 +55,7 @@
                     <button  class="search-button-item" value="I'm Feeling Lucky" type="submit">I'm Feeling Lucky</button>
                 </div>
             </div>
+            <!-- Search Bar & Button markup ends-->
         </main>
         <footer>
             <div class="tag-line">
