Removed anchor tag from image and removed inline styles for width & height

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <!--Logo Markup starts-->
             <div class="logo">
                 <div class="homepage-logo">
-                    <img src="/assets/images" alt="Google logo" style="padding-top: 21px;" title="Google Logo" width="450" height="180" border="0">
+                    <a href="#" style="text-decoration: none;">
+                        <img class="logo-img" src="assets/images/googlelogo_color_272x92dp.png"alt="Google logo" style="padding-top: 21px;" title="Google Logo" >
+                    </a>
                 </div>
             </div>
             <!--Logo Markup ends-->
