--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Google Homepage - TOP</title>
-        <link rel="stylesheet" href="assets/main.css">
-        <link rel="stylesheet" href="assets/reset.css">
+        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
         <meta charset="utf-8"/>
     </head>
     <body>
