--- a/index.html
+++ b/index.html
@@ -76,6 +76,25 @@
             <div class="tag-line">
                 <a href="">Stay at Home. Protect the NHS. Save Lives</a>
             </div>
+
+            <!--Fixed bottom nav-->
+            <div id="footer">
+                <div class="ft-inner">
+                    <div class="ft-bar" id="ft-bar-config">
+                        <span class="ft-left">
+                                <a class="ft-nav-start" href="#">Advertising</a>
+                                <a class="ft-nav" href="#">Business</a>
+                                <a class="ft-nav" href="#">How Search works</a>
+                        </span>
+                        <span class="ft-right">
+                            <a class="ft-nav-start" href="#">Privacy</a>
+                            <a class="ft-nav" href="#">Terms</a>
+                            <a class="ft-nav-end" href="#">Settings</a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
         </footer>
     </body>
 </html>
